mysql-deployment.yaml
apiVersion: v1
kind: Service 
metadata:
  name: social-login-app-mysql
  labels:   
    app: social-login-app
spec:
  ports:
    - port: 3306
  selector:
    app: social-login-app
    tier: mysql
  clusterIP: None
